# rich-logger

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
rich_logger/: __init__.py  pl_logger.py  spacy_logger.py  table_printer.py
tests/: test_logger.py  test_pytorch_lightning.py
