[tool.poetry]
name = "rich-logger"
version = "0.2.0"
description = "Table logger using Rich"
authors = ["Perceval Wajsbürt <perceval.wajsburt@sorbonne-universite.fr>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{ include = "rich_logger" }]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
rich = ">=10.11.0"
pydantic = ">=1.0.0"
tqdm = { version = ">=2.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
tqdm = ">=2.0.0"

[tool.poetry.plugins."spacy_loggers"]
"rich-logger" = "rich_logger.spacy:rich_logger"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 10
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
