[project]
name = "rich-logger"
version = "0.3.2"
description = "Table logger using Rich"
authors = [
    { name = "Perceval Wajsburt", email = "perceval.wajsburt@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7,<4.0"

dependencies = [
    "rich>=10.11.0",
    "pydantic>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.3",
    "coverage>=6.5.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=2.20.0",
    "tqdm>=2.0.0",
    "pytorch-lightning>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rich_logger*"]
namespaces = false

[project.entry-points."spacy_loggers"]
"rich-logger" = "rich_logger.spacy_logger:rich_logger"

# ----- Documentation -----
[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 8
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
ignore-regex = ['__(?!init).*__']
color = true
omit-covered-files = false

# ----- Linting & Testing -----
[tool.ruff]
fix = true
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
]
line-length = 200
select = [
    "E",
    "F",
    "W",
    "I001"
]
fixable = ["E", "F", "W", "I"]
